--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </header>
 
 
-    <section class="about">
+    <section class="section about">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 ">
                     <div class="about-me-title">
                         <h1 class="h1-responsive">I am Dmitriy</h1>
                     </div>
@@ -55,32 +55,34 @@
 
                     <div class="contact">
                         <div class="row">
-                            <div class="col-md-4"><span class="contact-title">Phone</span></div>
-                            <div class="col-md-8">380-98-77-87-687</div>
+                            <div class="col-md-4 col-sm-6 col-4"><span class="contact-title">Phone</span></div>
+                            <div class="col-md-8 col-sm-6 col-8">
+                                <span>380-98-77-87-687</span>
+                            </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-4"><span class="contact-title">Email</span></div>
-                            <div class="col-md-8">user-email@gmail.com</div>
+                            <div class="col-md-4 col-sm-6 col-4"><span class="contact-title">Email</span></div>
+                            <div class="col-md-8 col-sm-6 col-8">user-email@gmail.com</div>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-4"><span class="contact-title">Address</span></div>
-                            <div class="col-md-8">Odessa </div>
+                            <div class="col-md-4 col-sm-6 col-4"><span class="contact-title">Address</span></div>
+                            <div class="col-md-8 col-sm-6 col-8">Odessa </div>
                         </div>
 
                         <div class="row">
-                            <div class="col-md-4"><span class="contact-title">Social</span></div>
-                            <div class="col-md-8"><span class="fa fa-tg"></span></div>
+                            <div class="col-md-4 col-sm-6 col-4"><span class="contact-title">Social</span></div>
+                            <div class="col-md-8 col-sm-6 col-8"><span class="fa fa-tg"></span></div>
                         </div>
                     </div>
                     <div class="contact-buttons">
-                        <a class="contact contact-me">Contact me</a>
-                        <a class="contact download-CV">Download CV</a>
+                        <a class="button  contact-me">Contact me</a>
+                        <a class="button  download-CV">Download CV</a>
 
                     </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-center">
+                <div class="col-md-6 d-flex justify-content-center ">
                     <div class="photo d-flex justify-content-center align-self-center">
                         <p class="align-self-center">img</p>
                     </div>
@@ -90,6 +92,168 @@
             </div>
         </div>
     </section>
+
+    <section class="skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="h2-responsive ">Skills</h2>
+                    <div class="section-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, qui pariatur cupiditate ea nostrum enim fugit sint dolorum laudantium est incidunt aut, blanditiis nam fuga totam velit quo explicabo, officiis.</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col md-6">
+                            <h3 class="h3-responsive"><span>Frontend Development</span></h3>
+                            <div class="frontend-skills">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit..</p>
+                            </div>
+                        </div>
+                        <div class="col md-6">
+                            <h3 class="h3-responsive"><span>Database</span></h3>
+                            <div class="backend-skills">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quod aliquid explicabo recusanda.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col md-6">
+                            <h3 class="h3-responsive"><span>Backend development</span></h3>
+                            <div class="frontend-skills">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. .</p>
+                            </div>
+                        </div>
+                        <div class="col md-6">
+                            <h3 class="h3-responsive"><span>Other skills</span></h3>
+                            <div class="backend-skills">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quod aliquid explicabo recusandae.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="education">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="h2-responsive ">Education</h2>
+                    <div class="section-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, qui pariatur cupiditate ea nostrum enim fugit sint dolorum.</p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="h3-responsive speciality">
+                                <span>Computer Science</span>
+                            </h3>
+                            <p class="short-name">ONAFT - Student</p>
+                            <p class="year">Sep, 2017 - May, 2019</p>
+                            <p class="desc">Educational-scientific institute of computer systems and technologies "Industry 4.0"</p>
+
+                            <div class="frontend-skills">
+                                <p></p>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="h3-responsive speciality">
+                                <span>Frontend development</span>
+                            </h3>
+                            <p class="short-name">Hillel</p>
+                            <p class="year">Jun, 2017 - Nov, 2017</p>
+                            <p class="desc">Professional programming school Odessa Polytechnic University</p>
+
+                            <div class="frontend-skills">
+                                <p></p>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="h3-responsive speciality">
+                                <span>PHP</span>
+                            </h3>
+                            <p class="short-name">Hillel</p>
+                            <p class="year">Jun, 2017 - Nov, 2017</p>
+                            <p class="desc">Hillel - IT school </p>
+
+                            <div class="frontend-skills">
+                                <p></p>
+                            </div>
+                            <hr>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3 class="h3-responsive speciality">
+                                <span>Computer systems and networks</span>
+                            </h3>
+                            <p class="short-name">OTK - Associate Degree</p>
+                            <p class="year">Sep, 2013 - May, 2016</p>
+                            <p class="desc">Odessa technical college </p>
+
+                            <div class="frontend-skills">
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="h2-responsive">Portfolio</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="categories">
+                        <ul>
+                            <li><a href="">All project</a></li>
+                            <li><a href="">Frontend</a></li>
+                            <li><a href="">Backend</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 ">
+                    <div class="project-card">
+                        <div class="img"></div>
+                        <div class="title"></div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+
+                </div>
+
+                <div class="col-md-4">
+
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
 
 
 
