Portfolio section added

--- a/index.html
+++ b/index.html
@@ -233,26 +233,80 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-4 ">
+            <div class="row portfolio-cards">
+                <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
                     <div class="project-card">
-                        <div class="img"></div>
-                        <div class="title"></div>
+                        <div class="img"><a href="">
+                                <img src="img/porfolio/2.jpg" alt="">
+                            </a></div>
+                        <div class="title">
+                            <h4 class="h4-responsive"><a href="">Shop web app party</a></h4>
+                        </div>
+                        <div class="desc"><span>Some description, html, css, js, php</span></div>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-
+                <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center">
+                    <div class="project-card">
+                        <div class="img"><a href="">
+                                <img src="http://previews.aspirity.com/danny/media/portfolio-images/portfolio-2.jpg" alt="">
+                            </a></div>
+                        <div class="title">
+                            <h4 class="h4-responsive"><a href="">Startup website “Phoenix”</a></h4>
+                        </div>
+                        <div class="desc"><span>Some description, html, css, js, php</span></div>
+                    </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center">
+                    <div class="project-card">
+                        <div class="img"><a href="">
+                                <img src="http://previews.aspirity.com/danny/media/portfolio-images/portfolio-3.jpg" alt="">
+                            </a></div>
+                        <div class="title">
+                            <h4 class="h4-responsive"><a href="">Corporate chat “eWesta”</a></h4>
+                        </div>
+                        <div class="desc"><span>Some description, html, css, js, php</span></div>
+                    </div>
+                </div>
 
+                <div class="col-lg-3 col-md-6 d-flex justify-content-center">
+                    <div class="project-card">
+                        <div class="img"><a href="">
+                                <img src="http://previews.aspirity.com/danny/media/portfolio-images/portfolio-4.jpg" alt="">
+                            </a></div>
+                        <div class="title">
+                            <h4 class="h4-responsive"><a href="">Restaraunt web app “Foody”</a></h4>
+                        </div>
+                        <div class="desc"><span>Some description, html, css, js, php</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h2 class="h2-responsive ">Contact me</h2>
+                    <div class="section-desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, qui pariatur cupiditate ea nostrum enim fugit sint dolorum.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-3 contacts">
+                    <input type="text" placeholder="name">
+                    <input type="text" placeholder="email">
+                </div>
+                <div class="col-md-5 text">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="text"></textarea>
                 </div>
             </div>
 
         </div>
     </section>
-
 
 
 
