--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Material Design Bootstrap</title>
+    <title>Portfolio</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -288,25 +288,50 @@
 
     <section class="contact-section">
         <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h2 class="h2-responsive ">Contact me</h2>
-                    <div class="section-desc">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, qui pariatur cupiditate ea nostrum enim fugit sint dolorum.</p>
+            <form action="">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2 class="h2-responsive ">Contact me</h2>
+                        <div class="section-desc">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, qui pariatur cupiditate ea nostrum enim fugit sint dolorum.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-3 contacts">
+                        <input type="text" placeholder="Name">
+                        <input type="text" placeholder="Email">
+                    </div>
+                    <div class="col-md-5 text">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                        <div class="button">
+                            <input type="submit" value="Send message">
+                        </div>
                     </div>
                 </div>
-
-                <div class="col-md-3 contacts">
-                    <input type="text" placeholder="name">
-                    <input type="text" placeholder="email">
-                </div>
-                <div class="col-md-5 text">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="text"></textarea>
-                </div>
-            </div>
-
+            </form>
         </div>
     </section>
+
+    <footer>
+
+        <div class="icons d-flex justify-content-center">
+            <!--            <div class="icons-wrapper">-->
+            <a class="contact-icon  d-flex justify-content-center align-items-center" href="https://vk.com/warnes">
+                <img src="img/github-logo.png" alt="">
+            </a>
+
+            <a class="contact-icon d-flex justify-content-center align-items-center" href="https://vk.com/warnes">
+                <img src="img/linkedin-logo.png" style="width: 30px;" alt="">
+
+            </a>
+
+            <a class="contact-icon d-flex justify-content-center align-items-center" href="https://vk.com/warnes"> <img src="img/instagram.png" alt=""></a>
+            <!--            </div>-->
+        </div>
+        <div class="copyright  d-flex align-items-center justify-content-center">
+            <span>© 2018 Project by: Memruk D.S.</span>
+        </div>
+
+    </footer>
 
 
 
