Mobile first screen

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <section class="section about">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6 ">
+            <div class="row d-flex">
+                <div class="col-md-6 about-me">
                     <div class="about-me-title">
                         <h1 class="h1-responsive">I am Dmitriy</h1>
                     </div>
@@ -82,7 +82,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-6 d-flex justify-content-center ">
+                <div class="col-md-6 photo-block d-flex justify-content-center">
                     <div class="photo d-flex justify-content-center align-self-center">
                         <p class="align-self-center">img</p>
                     </div>
