Mob menu button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,19 @@
                             <li><a href="">Portfolio</a></li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="container-fluid mobile-header">
+            <div class="wrapper d-flex">
+                <div class="brand">
+                    <span class="logo">D.S.</span>
+                </div>
+                <div class="burger-btn">
+                    <a href="#" class="menu-btn">
+                        <span></span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -315,16 +327,16 @@
 
         <div class="icons d-flex justify-content-center">
             <!--            <div class="icons-wrapper">-->
-            <a class="contact-icon  d-flex justify-content-center align-items-center" href="https://vk.com/warnes">
+            <a class="contact-icon  d-flex justify-content-center align-items-center" href="https://github.com/ProteinR">
                 <img src="img/github-logo.png" alt="">
             </a>
 
-            <a class="contact-icon d-flex justify-content-center align-items-center" href="https://vk.com/warnes">
+            <a class="contact-icon d-flex justify-content-center align-items-center" href="https://www.linkedin.com/in/memruk-d/">
                 <img src="img/linkedin-logo.png" style="width: 30px;" alt="">
 
             </a>
 
-            <a class="contact-icon d-flex justify-content-center align-items-center" href="https://vk.com/warnes"> <img src="img/instagram.png" alt=""></a>
+            <a class="contact-icon d-flex justify-content-center align-items-center" href="https://www.instagram.com/dmitry.mk/"> <img src="img/instagram.png" alt=""></a>
             <!--            </div>-->
         </div>
         <div class="copyright  d-flex align-items-center justify-content-center">
